# soft2d

./: Cargo.toml  README.md
examples/: character.rs
src/: image.rs  lib.rs  window.rs
src/core/: blit.rs  color.rs  mod.rs  surface.rs
