[package]
name = "soft2d"
version = "0.1.0"
edition = "2024"

[features]
default = ["window", "png"]
window = ["dep:winit", "dep:softbuffer"]
png = ["dep:image", "image/png"]

[dependencies]
glam = "0.30.5"

[dependencies.winit]
version = "0.30.12"
optional = true

[dependencies.softbuffer]
version = "0.4.6"
optional = true

[dependencies.image]
version = "0.25.6"
default-features = false
optional = true

[profile.release]
lto = true
codegen-units = 1
